Begin big rewrite of the code (this is actually from like two weeks ago)